# slurm-plugins

./: .editorconfig  .gitignore  README.md  SECURITY.md
.github/workflows/: spank_nccl-inspector-preconf.yaml
spank/nccl-inspector-preconf/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
spank/nccl-inspector-preconf/config/: copyright.sh  nfpm.yaml
spank/nccl-inspector-preconf/dev-docker/: README.md  builder.dockerfile
spank/nccl-inspector-preconf/docker/: base.dockerfile  builder.dockerfile  headers.dockerfile
spank/nccl-inspector-preconf/src/: go.mod  main.go  snccliprecon.c  snccliprecon.h  snccliprecon_config.c  snccliprecon_config.h  snccliprecon_enroot.c  snccliprecon_enroot.h  snccliprecon_env.c  snccliprecon_env.h  snccliprecon_file_ops.c  snccliprecon_file_ops.h  snccliprecon_op_task_exit.c  snccliprecon_op_task_init_privileged.c  snccliprecon_op_user_init.c  snccliprecon_worker_lock.c  snccliprecon_worker_lock.h  spank_config.c  spank_config.h  spank_constants.h  spank_enroot.c  spank_enroot.h  spank_env.c  spank_file_ops.c  spank_file_ops.h  spank_helpers.c  spank_init.c  spank_options.c  spank_shim.c  spank_shim.h  spank_substitute.c  spank_substitute.h  spank_task_exit.c  spank_task_init_privileged.c  spank_task_init_privileged.h  spank_user_init.c
spank/nccl-inspector-preconf/src/cmd/spank-options-gen/: main.go
spank/nccl-inspector-preconf/src/internal/arg/: arg.go  env.go  main.go
spank/nccl-inspector-preconf/src/internal/arg/parse/: parse.go
spank/nccl-inspector-preconf/src/internal/bridge/: bridge.go
spank/nccl-inspector-preconf/src/internal/cfg/: config.go
spank/nccl-inspector-preconf/src/internal/enroot/: mounts.go
spank/nccl-inspector-preconf/src/internal/env/: env.go
spank/nccl-inspector-preconf/src/internal/log/: log.go
spank/nccl-inspector-preconf/src/internal/plugin/: lock.go  plugin.go  state.go
spank/nccl-inspector-preconf/src/internal/unix/: dir.go  flock.go  hostname.go  libarch.go  mode.go
spank/nccl-inspector-preconf/src/internal/utils/optionrender/: render.go
